--- a/home.org
+++ b/home.org
@@ -1407,6 +1407,7 @@
         (require 'ob-tangle)
         (setq org-babel-shell-names (cons "zsh" org-babel-shell-names))
         (setq org-src-fontify-natively t)
+        (setq org-confirm-babel-evaluate nil)
         (org-babel-do-load-languages
          'org-babel-load-languages
          '((python . t)
