--- a/~!.emacs.d/init.org
+++ b/~!.emacs.d/init.org
@@ -1,7 +1,8 @@
+# -*- after-save-hook: org-babel-tangle; -*-
 #+TITLE: My Emacs Setup
 #+PROPERTY: header-args :tangle "~/.emacs.d/init.el"
 
-* header
+* Header
   #+begin_src emacs-lisp
   ;;; .init.el --- My emacs setup                      -*- lexical-binding: t; -*-
 
@@ -183,9 +184,6 @@
     Emacs versions."
       (interactive)
       (byte-recompile-directory package-user-dir nil t))
-
-    (provide 'autoloads)
-
   #+end_src
 
 * Packages
@@ -387,6 +385,62 @@
        (define-key Buffer-menu-mode-map "." 'hydra-buffer-menu/body)
        )
    #+end_src
+
+* macOS
+  #+begin_src emacs-lisp
+    ;;;###autoload
+    (defun +macos-open-with (&optional app-name path)
+      "Send PATH to APP-NAME on OSX."
+      (interactive)
+      (let* ((path (expand-file-name
+                    (replace-regexp-in-string
+                     "'" "\\'"
+                     (or path (if (eq major-mode 'dired-mode)
+                                  (dired-get-file-for-visit)
+                                (buffer-file-name)))
+                     nil t)))
+             (command (format "open %s"
+                              (if app-name
+                                  (format "-a %s '%s'" (shell-quote-argument app-name) path)
+                                (format "'%s'" path)))))
+        (message "Running: %s" command)
+        (shell-command command)))
+
+    ;;;###autoload
+    (defmacro +macos!open-with (id &optional app dir)
+      `(defun ,(intern (format "+macos/%s" id)) ()
+         (interactive)
+         (+macos-open-with ,app ,dir)))
+
+    ;;;###autoload (autoload '+macos/open-in-default-program "tools/macos/autoload" nil t)
+    (+macos!open-with open-in-default-program)
+
+    ;;;###autoload (autoload '+macos/reveal-in-finder "tools/macos/autoload" nil t)
+    (+macos!open-with reveal-in-finder "Finder" default-directory)
+
+    ;;;###autoload (autoload '+macos/reveal-project-in-finder "tools/macos/autoload" nil t)
+    (+macos!open-with reveal-project-in-finder "Finder"
+                      (or (doom-project-root) default-directory))
+
+    ;;;###autoload (autoload '+macos/send-to-transmit "tools/macos/autoload" nil t)
+    (+macos!open-with send-to-transmit "Transmit")
+
+    ;;;###autoload (autoload '+macos/send-cwd-to-transmit "tools/macos/autoload" nil t)
+    (+macos!open-with send-cwd-to-transmit "Transmit" default-directory)
+
+    ;;;###autoload (autoload '+macos/send-to-launchbar "tools/macos/autoload" nil t)
+    (+macos!open-with send-to-launchbar "LaunchBar")
+
+    ;;;###autoload (autoload '+macos/send-project-to-launchbar "tools/macos/autoload" nil t)
+    (+macos!open-with send-project-to-launchbar "LaunchBar"
+                      (or (doom-project-root) default-directory))
+
+    (map|open
+      "o" '(+macos/reveal-in-finder :which-key "Open In Finder"))
+
+    (setq mac-command-modifier 'meta)
+
+  #+end_src
 
 * UI
 
@@ -674,6 +728,82 @@
        ("M-f" . swiper))
    #+end_src
 
+** dired
+   #+begin_src emacs-lisp
+     (use-package dired
+       :ensure nil
+       :config
+       (defhydra hydra-dired (:hint nil :color pink)
+         "
+          _+_ mkdir          _v_iew           _m_ark             _(_ details        _i_nsert-subdir    wdired
+          _C_opy             _O_ view other   _U_nmark all       _)_ omit-mode      _$_ hide-subdir    C-x C-q : edit
+          _D_elete           _o_pen other     _u_nmark           _l_ redisplay      _w_ kill-subdir    C-c C-c : commit
+          _R_ename           _M_ chmod        _t_oggle           _g_ revert buf     _e_ ediff          C-c ESC : abort
+          _Y_ rel symlink    _G_ chgrp        _E_xtension mark   _s_ort             _=_ pdiff
+          _S_ymlink          ^ ^              _F_ind marked      _._ toggle hydra   \\ flyspell
+          _r_sync            ^ ^              ^ ^                ^ ^                _?_ summary
+          _z_ compress-file  _A_ find regexp
+          _Z_ compress       _Q_ repl regexp
+
+          T - tag prefix
+          "
+         ("\\" dired-do-ispell)
+         ("(" dired-hide-details-mode)
+         (")" dired-omit-mode)
+         ("+" dired-create-directory)
+         ("=" diredp-ediff)         ;; smart diff
+         ("?" dired-summary)
+         ("$" diredp-hide-subdir-nomove)
+         ("A" dired-do-find-regexp)
+         ("C" dired-do-copy)        ;; Copy all marked files
+         ("D" dired-do-delete)
+         ("E" dired-mark-extension)
+         ("e" dired-ediff-files)
+         ("F" dired-do-find-marked-files)
+         ("G" dired-do-chgrp)
+         ("g" revert-buffer)        ;; read all directories again (refresh)
+         ("i" dired-maybe-insert-subdir)
+         ("l" dired-do-redisplay)   ;; relist the marked or singel directory
+         ("M" dired-do-chmod)
+         ("m" dired-mark)
+         ("O" dired-display-file)
+         ("o" dired-find-file-other-window)
+         ("Q" dired-do-find-regexp-and-replace)
+         ("R" dired-do-rename)
+         ("r" dired-do-rsynch)
+         ("S" dired-do-symlink)
+         ("s" dired-sort-toggle-or-edit)
+         ("t" dired-toggle-marks)
+         ("U" dired-unmark-all-marks)
+         ("u" dired-unmark)
+         ("v" dired-view-file)      ;; q to exit, s to search, = gets line #
+         ("w" dired-kill-subdir)
+         ("Y" dired-do-relsymlink)
+         ("z" diredp-compress-this-file)
+         ("Z" dired-do-compress)
+         ("q" nil)
+         ("." nil :color blue))
+
+       (define-key dired-mode-map "." 'hydra-dired/body))
+
+   #+end_src
+   
+** ranger
+   #+begin_src emacs-lisp
+     (use-package ranger
+       :after dired
+       :init
+       :config
+       (setq ranger-override-dired t
+             ranger-cleanup-on-disable t
+             ranger-omit-regexp "^\.DS_Store$"
+             ranger-excluded-extensions '("mkv" "iso" "mp4")
+             ranger-deer-show-details nil
+             ranger-max-preview-size 10
+             dired-omit-verbose nil))
+
+   #+end_src
+   
 * Evil
   [[https://www.reddit.com/r/emacs/comments/70rjc9/which_modeline_package_integrates_well_with_evil/][Which mode-line package integrates well with Evil?]]
 
@@ -1324,6 +1454,45 @@
 
   #+end_src
 
+** deft
+   #+begin_src emacs-lisp
+     (use-package deft
+       :commands deft
+       :init
+       (setq deft-extensions '("org")
+         deft-default-extension "org"
+         deft-directory "~/io"
+         deft-recursive t
+         ;; de-couples filename and note title:
+         deft-use-filename-as-title t
+         deft-use-filter-string-for-filename t
+         ;; deft-org-mode-title-prefix t
+         ;; converts the filter string into a readable file-name using kebab-case:
+         deft-file-naming-rules
+         '((noslash . "-")
+           (nospace . "-")
+           (case-fn . downcase)))
+       :config
+       :general
+       (map|open
+         "n" '(deft :which-key "Deft")))
+     ;; start filtering immediately
+     ;; (set-evil-initial-state! 'deft-mode 'insert)
+     ;; (map! :map deft-mode-map
+     ;;       :localleader
+     ;;       :n "RET" #'deft-new-file-named
+     ;;       :n "a" #'deft-archive-file
+     ;;       :n "c" #'deft-filter-clear
+     ;;       :n "d" #'deft-delete-file
+     ;;       :n "f" #'deft-find-file
+     ;;       :n "g" #'deft-refresh
+     ;;       :n "l" #'deft-filter
+     ;;       :n "n" #'deft-new-file
+     ;;       :n "r" #'deft-rename-file
+     ;;       :n "s" #'deft-toggle-sort-method
+     ;;       :n "t" #'deft-toggle-incremental-search))
+   #+end_src
+
 * Writing
 
 ** Spell Check
@@ -1404,10 +1573,65 @@
    #+end_src
 
 * Coding
-
 ** snippets
    #+begin_src emacs-lisp
      (use-package yasnippet)
+   #+end_src
+
+** flycheck
+   #+begin_src emacs-lisp
+     ;;;###autoload
+     (defun +flycheck|init-popups ()
+       "Activate `flycheck-posframe-mode' if available and in GUI Emacs.
+     Activate `flycheck-popup-tip-mode' otherwise.
+     Do nothing if `lsp-ui-mode' is active and `lsp-ui-sideline-enable' is non-nil."
+       (unless (and (bound-and-true-p lsp-ui-mode)
+                    lsp-ui-sideline-enable)
+         (if (and (fboundp 'flycheck-posframe-mode)
+                  (display-graphic-p))
+             (flycheck-posframe-mode +1)
+           (flycheck-popup-tip-mode +1))))
+
+     (use-package flycheck
+       :init (global-flycheck-mode)
+       :general
+       (map!
+         "e" '(hydra-flycheck/body :which-key "Errors"))
+       :config
+       ;; Emacs feels snappier without checks on newline
+       (setq flycheck-check-syntax-automatically '(save idle-change mode-enabled))
+       (global-flycheck-mode +1)
+       (defhydra hydra-flycheck
+         (:pre (progn (setq hydra-lv t) (flycheck-list-errors))
+          :post (progn (setq hydra-lv nil) (quit-windows-on "*Flycheck errors*"))
+          :hint nil)
+         "Errors"
+         ("f"  flycheck-error-list-set-filter                            "Filter")
+         ("j"  flycheck-next-error                                       "Next")
+         ("k"  flycheck-previous-error                                   "Previous")
+         ("gg" flycheck-first-error                                      "First")
+         ("G"  (progn (goto-char (point-max)) (flycheck-previous-error)) "Last")
+         ("q"  nil))
+       )
+
+     ;; (use-package flycheck-popup-tip
+     ;;   :commands (flycheck-popup-tip-show-popup flycheck-popup-tip-delete-popup)
+     ;;   :init (add-hook 'flycheck-mode-hook 'flycheck-popup-tip-mode)
+     ;;   :config (setq flycheck-popup-tip-error-prefix "✕ "))
+
+     (use-package flycheck-posframe
+       :ensure t
+       :after flycheck
+       :init (add-hook 'flycheck-mode-hook #'+flycheck|init-popups)
+       :config (add-hook 'flycheck-mode-hook #'flycheck-posframe-mode))
+
+     ;; (use-package flycheck-posframe
+     ;;   :commands flycheck-posframe-show-posframe
+     ;;   :config
+     ;;   (setq flycheck-posframe-warning-prefix "⚠ "
+     ;;         flycheck-posframe-info-prefix "··· "
+     ;;         flycheck-posframe-error-prefix "✕ "))
+
    #+end_src
 
 ** lsp
@@ -1477,6 +1701,7 @@
        (setq company-lsp-async t))
 
    #+end_src
+
 ** lisp
    #+begin_src emacs-lisp
      (use-package highlight-quoted)
@@ -1565,3 +1790,162 @@
 
    #+end_src
 
+** WWW
+*** JavaScript
+    #+begin_src emacs-lisp
+      (use-package js2-mode
+        :mode "\\.\\(js\\|snap\\)\\'"
+        :interpreter "node"
+        :init
+        (add-hook 'js2-mode-hook #'js2-imenu-extras-mode)
+        :config
+        (setq js2-skip-preprocessor-directives t
+          js-chain-indent t
+          ;; let flycheck handle this
+          js2-mode-show-parse-errors nil
+          js2-mode-show-strict-warnings nil
+          ;; Flycheck provides these features, so disable them: conflicting with
+          ;; the eslint settings.
+          js2-strict-trailing-comma-warning nil
+          js2-strict-missing-semi-warning nil
+          ;; maximum fontification
+          js2-highlight-level 3
+          js2-highlight-external-variables t)
+        (add-hook 'js2-mode-hook #'rainbow-delimiters-mode)
+
+        ;; typescript-language-server does not take prefix in count, filter here
+        (defun x|company-transformer (candidates)
+          (let ((completion-ignore-case t))
+            (all-completions (company-grab-symbol) candidates)))
+        (defun x|js-hook nil
+          (make-local-variable 'company-transformers)
+          (push 'x|company-transformer company-transformers))
+        (add-hook 'js-mode-hook 'x|js-hook)
+
+        (with-eval-after-load 'lsp-clients
+          (add-hook 'js2-mode-hook #'lsp)))
+
+      (use-package rjsx-mode
+        :mode "components/.+\\.js$"
+        :init
+        (defun +javascript-jsx-file-p ()
+          "Detect React or preact imports early in the file."
+          (and buffer-file-name
+            (string= (file-name-extension buffer-file-name) "js")
+            (re-search-forward "\\(^\\s-*import +React\\|\\( from \\|require(\\)[\"']p?react\\)"
+              magic-mode-regexp-match-limit t)
+            (progn (goto-char (match-beginning 1))
+              (not (sp-point-in-string-or-comment)))))
+        (add-to-list 'magic-mode-alist '(+javascript-jsx-file-p . rjsx-mode))
+        :config
+        ;; (set-electric! 'rjsx-mode :chars '(?\} ?\) ?. ?>))
+        ;; (when (featurep! :feature syntax-checker)
+        ;;   (add-hook! 'rjsx-mode-hook
+        ;;     ;; jshint doesn't know how to deal with jsx
+        ;;     (push 'javascript-jshint flycheck-disabled-checkers)))
+
+        ;; ;; `rjsx-electric-gt' relies on js2's parser to tell it when the cursor is in
+        ;; ;; a self-closing tag, so that it can insert a matching ending tag at point.
+        ;; ;; However, the parser doesn't run immediately, so a fast typist can outrun
+        ;; ;; it, causing tags to stay unclosed, so we force it to parse.
+        ;; (defun +javascript|reparse (n)
+        ;;   ;; if n != 1, rjsx-electric-gt calls rjsx-maybe-reparse itself
+        ;;   (if (= n 1) (rjsx-maybe-reparse)))
+        ;; (advice-add #'rjsx-electric-gt :before #'+javascript|reparse)
+        (with-eval-after-load 'lsp-clients
+          (add-to-list 'language-lsp-id-configuration '(rjsx-mode . "javascript"))
+          (add-hook 'rjsx-mode-hook #'lsp))
+        )
+
+      (use-package add-node-modules-path
+        :config
+        (progn
+          (eval-after-load 'js2-mode
+            '(add-hook 'js2-mode-hook #'add-node-modules-path))))
+    #+end_src
+
+*** web
+    #+begin_src emacs-lisp
+      (use-package emmet-mode
+        :preface (defvar emmet-mode-keymap (make-sparse-keymap))
+        :hook (css-mode web-mode html-mode haml-mode nxml-mode rjsx-mode reason-mode)
+        :config
+        (when (require 'yasnippet nil t)
+          (add-hook 'emmet-mode-hook #'yas-minor-mode-on))
+        (setq emmet-move-cursor-between-quotes t)
+        :general
+        (:keymaps 'emmet-mode-keymap
+         :states '(visual)
+         "TAB" #'emmet-wrap-with-markup)
+        (:keymaps 'emmet-mode-keymap
+         :states '(insert)
+         "TAB" #'emmet-expand-line)
+        )
+      ;; (setq-hook! 'rjsx-mode-hook emmet-expand-jsx-className? t)
+      ;; (map! :map emmet-mode-keymap
+      ;; 	:v [tab] #'emmet-wrap-with-markup
+      ;; 	:i [tab] #'+web/indent-or-yas-or-emmet-expand
+      ;; 	:i "M-E" #'emmet-expand-line))
+
+
+      (use-package web-mode
+        :mode "\\.p?html?$")
+
+    #+end_src
+
+** markdown
+
+   #+begin_src emacs-lisp
+     (use-package markdown-mode
+       :mode ("/README\\(?:\\.\\(?:markdown\\|md\\)\\)?\\'" . gfm-mode)
+       :init
+       (setq markdown-enable-wiki-links t
+             markdown-italic-underscore t
+             markdown-asymmetric-header t
+             markdown-make-gfm-checkboxes-buttons t
+             markdown-gfm-additional-languages '("sh")
+             markdown-fontify-code-blocks-natively t
+             markdown-hide-urls nil ; trigger with `markdown-toggle-url-hiding'
+             markdown-enable-math t ; syntax highlighting for latex fragments
+             markdown-gfm-uppercase-checkbox t) ; for compat with org-mode
+       :config)
+   #+end_src
+
+** shell
+   #+begin_src emacs-lisp
+     (use-package fish-mode)
+
+     (use-package company-shell
+       :after sh-script)
+   #+end_src
+
+** rust
+
+   #+begin_src emacs-lisp
+     (use-package flycheck-rust)
+
+     (use-package rustic
+       :config
+       (setq rustic-indent-method-chain t
+         rustic-flycheck-setup-mode-line-p nil
+         ;; use :editor format instead
+         rustic-format-on-save nil))
+   #+end_src
+
+** yaml
+   #+begin_src emacs-lisp
+     (use-package yaml-mode
+       :mode "\\.yml\\'")
+
+   #+end_src
+
+** lua
+   #+begin_src emacs-lisp
+     (use-package lua-mode)
+   #+end_src
+
+** swift
+   #+begin_src emacs-lisp
+     (use-package swift-mode)
+   #+end_src
+   
