flycheck for rust

--- a/~!.emacs.d/init.org
+++ b/~!.emacs.d/init.org
@@ -1928,7 +1928,8 @@
 
 
    #+begin_src emacs-lisp
-     (use-package flycheck-rust)
+     (use-package flycheck-rust
+       :config (add-hook 'flycheck-mode-hook #'flycheck-rust-setup))
 
      (use-package rustic
        :config
