ignore files for LaunchBar, eshell files in the right place

--- a/~!.emacs.d/init.org
+++ b/~!.emacs.d/init.org
@@ -1977,7 +1977,7 @@
 ** shell
    #+begin_src emacs-lisp
      (use-package fish-mode)
-
+     (defvar eshell-directory-name (concat x/etc-dir "eshell"))
      (use-package company-shell
        :after sh-script)
    #+end_src
